--- a/src/main/resources/com/example/roskildedaycare/admin-logged-in.fxml
+++ b/src/main/resources/com/example/roskildedaycare/admin-logged-in.fxml
@@ -10,12 +10,16 @@
    <children>
       <AnchorPane prefHeight="400.0" prefWidth="624.0">
          <children>
-            <Label fx:id="welcomeLbl" layoutX="14.0" layoutY="14.0" prefHeight="27.0" prefWidth="580.0" text="Welcome to the database!">
+            <Label fx:id="welcomeLbl" layoutY="43.0" prefHeight="27.0" prefWidth="600.0" text="Welcome to the database!" textAlignment="CENTER">
                <font>
                   <Font size="18.0" />
                </font>
             </Label>
             <Button fx:id="logoutBtn" layoutX="511.0" layoutY="359.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="75.0" text="Logout" />
+            <Button fx:id="scheduleBtn" layoutX="114.0" layoutY="101.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="376.0" text="Schedule" />
+            <Button fx:id="childrenBtn" layoutX="114.0" layoutY="158.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="376.0" text="Children" />
+            <Button fx:id="parentsBtn" layoutX="114.0" layoutY="214.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="376.0" text="Parents" />
+            <Button fx:id="managementBtn" layoutX="116.0" layoutY="269.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="376.0" text="User managment" />
          </children>
       </AnchorPane>
    </children>
