--- a/src/main/resources/com/example/roskildedaycare/schedule.fxml
+++ b/src/main/resources/com/example/roskildedaycare/schedule.fxml
@@ -23,35 +23,35 @@
             <Label fx:id="nameTxt1" prefHeight="30.0" prefWidth="137.0" text="Label" />
             <Label fx:id="surnameTxt1" prefHeight="30.0" prefWidth="137.0" text="Label" />
             <Label fx:id="numberTxt1" prefHeight="30.0" prefWidth="137.0" text="Label" textAlignment="CENTER" />
-            <Button fx:id="kidBtn1" mnemonicParsing="false" prefHeight="30.0" prefWidth="137.0" />
+            <Button fx:id="kidBtn1" mnemonicParsing="false" prefHeight="30.0" prefWidth="137.0" text="Delete" />
             <Label fx:id="nameTxt2" prefHeight="30.0" prefWidth="137.0" text="Label" />
             <Label fx:id="surnameTxt2" prefHeight="30.0" prefWidth="137.0" text="Label" />
             <Label fx:id="numberTxt2" prefHeight="30.0" prefWidth="137.0" text="Label" textAlignment="CENTER" />
-            <Button fx:id="kidBtn2" mnemonicParsing="false" prefHeight="30.0" prefWidth="137.0" text="Button" />
+            <Button fx:id="kidBtn2" mnemonicParsing="false" prefHeight="30.0" prefWidth="137.0" text="Delete" />
             <Label fx:id="nameTxt3" prefHeight="30.0" prefWidth="137.0" text="Label" />
             <Label fx:id="surnameTxt3" prefHeight="30.0" prefWidth="137.0" text="Label" />
             <Label fx:id="numberTxt3" prefHeight="30.0" prefWidth="137.0" text="Label" textAlignment="CENTER" />
-            <Button fx:id="kidBtn3" mnemonicParsing="false" prefHeight="30.0" prefWidth="137.0" text="Button" />
+            <Button fx:id="kidBtn3" mnemonicParsing="false" prefHeight="30.0" prefWidth="137.0" text="Delete" />
             <Label fx:id="nameTxt4" prefHeight="30.0" prefWidth="137.0" text="Label" />
             <Label fx:id="surnameTxt4" prefHeight="30.0" prefWidth="137.0" text="Label" />
             <Label fx:id="numberTxt4" prefHeight="30.0" prefWidth="137.0" text="Label" textAlignment="CENTER" />
-            <Button fx:id="kidBtn4" mnemonicParsing="false" prefHeight="30.0" prefWidth="137.0" text="Button" />
+            <Button fx:id="kidBtn4" mnemonicParsing="false" prefHeight="30.0" prefWidth="137.0" text="Delete" />
             <Label fx:id="nameTxt5" prefHeight="30.0" prefWidth="137.0" text="Label" />
             <Label fx:id="surnameTxt5" prefHeight="30.0" prefWidth="137.0" text="Label" />
             <Label fx:id="numberTxt5" prefHeight="30.0" prefWidth="137.0" text="Label" textAlignment="CENTER" />
-            <Button fx:id="kidBtn5" mnemonicParsing="false" prefHeight="30.0" prefWidth="137.0" text="Button" />
+            <Button fx:id="kidBtn5" mnemonicParsing="false" prefHeight="30.0" prefWidth="137.0" text="Delete" />
             <Label fx:id="nameTxt6" prefHeight="30.0" prefWidth="137.0" text="Label" />
             <Label fx:id="surnameTxt6" prefHeight="30.0" prefWidth="137.0" text="Label" />
             <Label fx:id="numberTxt6" prefHeight="30.0" prefWidth="137.0" text="Label" textAlignment="CENTER" />
-            <Button fx:id="kidBtn6" mnemonicParsing="false" prefHeight="30.0" prefWidth="137.0" text="Button" />
+            <Button fx:id="kidBtn6" mnemonicParsing="false" prefHeight="30.0" prefWidth="137.0" text="Delete" />
             <Label fx:id="nameTxt7" prefHeight="30.0" prefWidth="137.0" text="Label" />
             <Label fx:id="surnameTxt7" prefHeight="30.0" prefWidth="137.0" text="Label" />
             <Label fx:id="numberTxt7" prefHeight="30.0" prefWidth="137.0" text="Label" textAlignment="CENTER" />
-            <Button fx:id="kidBtn7" mnemonicParsing="false" prefHeight="30.0" prefWidth="137.0" text="Button" />
+            <Button fx:id="kidBtn7" mnemonicParsing="false" prefHeight="30.0" prefWidth="137.0" text="Delete" />
             <Label fx:id="nameTxt8" prefHeight="30.0" prefWidth="137.0" text="Label" />
             <Label fx:id="surnameTxt8" prefHeight="30.0" prefWidth="137.0" text="Label" />
             <Label fx:id="numberTxt8" prefHeight="30.0" prefWidth="137.0" text="Label" textAlignment="CENTER" />
-            <Button fx:id="kidBtn8" mnemonicParsing="false" prefHeight="30.0" prefWidth="137.0" text="button" />
+            <Button fx:id="kidBtn8" mnemonicParsing="false" prefHeight="30.0" prefWidth="137.0" text="Delete" />
          </children>
       </TextFlow>
       <ScrollBar fx:id="upDownScroll" layoutX="589.0" layoutY="21.0" orientation="VERTICAL" prefHeight="274.0" prefWidth="14.0" />
