--- a/src/main/resources/com/example/roskildedaycare/kidsUser.fxml
+++ b/src/main/resources/com/example/roskildedaycare/kidsUser.fxml
@@ -1,14 +1,43 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollBar?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.TextFlow?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.example.roskildedaycare.KidsUserController"
-            prefHeight="400.0" prefWidth="600.0">
 
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.roskildedaycare.KidsUserController">
+   <children>
+      <TextFlow fx:id="parentsTxt" layoutX="86.0" layoutY="39.0" prefHeight="250.0" prefWidth="454.0">
+         <children>
+            <Label fx:id="nameTxt1" prefHeight="30.0" prefWidth="137.0" text="Label" />
+            <Label fx:id="surnameTxt1" prefHeight="30.0" prefWidth="137.0" text="Label" />
+            <Label fx:id="numberTxt1" prefHeight="30.0" prefWidth="137.0" text="Label" textAlignment="CENTER" />
+            <Label fx:id="nameTxt2" prefHeight="30.0" prefWidth="137.0" text="Label" />
+            <Label fx:id="surnameTxt2" prefHeight="30.0" prefWidth="137.0" text="Label" />
+            <Label fx:id="numberTxt2" prefHeight="30.0" prefWidth="137.0" text="Label" textAlignment="CENTER" />
+            <Label fx:id="nameTxt3" prefHeight="30.0" prefWidth="137.0" text="Label" />
+            <Label fx:id="surnameTxt3" prefHeight="30.0" prefWidth="137.0" text="Label" />
+            <Label fx:id="numberTxt3" prefHeight="30.0" prefWidth="137.0" text="Label" textAlignment="CENTER" />
+            <Label fx:id="nameTxt4" prefHeight="30.0" prefWidth="137.0" text="Label" />
+            <Label fx:id="surnameTxt4" prefHeight="30.0" prefWidth="137.0" text="Label" />
+            <Label fx:id="numberTxt4" prefHeight="30.0" prefWidth="137.0" text="Label" textAlignment="CENTER" />
+            <Label fx:id="nameTxt5" prefHeight="30.0" prefWidth="137.0" text="Label" />
+            <Label fx:id="surnameTxt5" prefHeight="30.0" prefWidth="137.0" text="Label" />
+            <Label fx:id="numberTxt5" prefHeight="30.0" prefWidth="137.0" text="Label" textAlignment="CENTER" />
+            <Label fx:id="nameTxt6" prefHeight="30.0" prefWidth="137.0" text="Label" />
+            <Label fx:id="surnameTxt6" prefHeight="30.0" prefWidth="137.0" text="Label" />
+            <Label fx:id="numberTxt6" prefHeight="30.0" prefWidth="137.0" text="Label" textAlignment="CENTER" />
+            <Label fx:id="nameTxt7" prefHeight="30.0" prefWidth="137.0" text="Label" />
+            <Label fx:id="surnameTxt7" prefHeight="30.0" prefWidth="137.0" text="Label" />
+            <Label fx:id="numberTxt7" prefHeight="30.0" prefWidth="137.0" text="Label" textAlignment="CENTER" />
+            <Label fx:id="nameTxt8" prefHeight="30.0" prefWidth="137.0" text="Label" />
+            <Label fx:id="surnameTxt8" prefHeight="30.0" prefWidth="137.0" text="Label" />
+            <Label fx:id="numberTxt8" prefHeight="30.0" prefWidth="137.0" text="Label" textAlignment="CENTER" />
+         </children>
+      </TextFlow>
+      <ScrollBar fx:id="upDownScroll" layoutX="589.0" layoutY="27.0" orientation="VERTICAL" prefHeight="274.0" prefWidth="14.0" />
+      <Button fx:id="returnBtn" layoutX="511.0" layoutY="359.0" mnemonicParsing="false" prefHeight="24.0" prefWidth="75.0" text="Return" />
+   </children>
 </AnchorPane>
