--- a/src/main/resources/com/example/roskildedaycare/view-user.fxml
+++ b/src/main/resources/com/example/roskildedaycare/view-user.fxml
@@ -20,10 +20,10 @@
             <Button fx:id="returnBtn" layoutX="511.0" layoutY="359.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="75.0" text="Return" />
             <TableView fx:id="table" layoutX="73.0" layoutY="83.0" prefHeight="235.0" prefWidth="455.0">
               <columns>
-                <TableColumn fx:id="firstname" prefWidth="103.0" text="First name" />
-                <TableColumn fx:id="lastname" minWidth="4.0" prefWidth="94.0" text="Last Name" />
+                <TableColumn fx:id="firstName" prefWidth="103.0" text="First name" />
+                <TableColumn fx:id="lastName" minWidth="4.0" prefWidth="94.0" text="Last Name" />
                   <TableColumn fx:id="telephone" minWidth="0.0" prefWidth="74.0" text="Telephone" />
-                  <TableColumn fx:id="username" prefWidth="100.0" text="Username" />
+                  <TableColumn fx:id="userName" prefWidth="100.0" text="Username" />
                   <TableColumn fx:id="admin" minWidth="1.0" prefWidth="83.0" text="Admin" />
               </columns>
             </TableView>
