--- a/src/main/resources/com/example/roskildedaycare/user-logged-in.fxml
+++ b/src/main/resources/com/example/roskildedaycare/user-logged-in.fxml
@@ -11,9 +11,9 @@
    <children>
       <AnchorPane prefHeight="400.0" prefWidth="624.0">
          <children>
-            <Label fx:id="welcomeLbl" layoutY="53.0" prefHeight="27.0" prefWidth="600.0" text="Welcome to the database!" textAlignment="CENTER">
+            <Label fx:id="welcomeLbl" layoutX="150.0" layoutY="58.0" prefHeight="27.0" prefWidth="330.0" text="Welcome to the database!" textAlignment="CENTER" underline="true">
                <font>
-                  <Font size="18.0" />
+                  <Font name="Bell MT Bold" size="18.0" />
                </font>
             </Label>
             <Button fx:id="logoutBtn" layoutX="495.0" layoutY="349.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="75.0" text="Logout" />
